<resources>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://web.tinode.co/.well-known/assetlinks.json\" }]</string>
    <string name="tinode_url" translatable="false">http://cyberwire.ddns.net</string>
    <string name="emulator_host_name" translatable="false">10.0.2.2:6060</string>
    <string name="contact_us_uri" translatable="false">mailto:support@tinode.co</string>
    <string name="terms_of_use_uri" translatable="false">http://cyberwire.ddns.net/terms.html</string>
    <string name="privacy_policy_uri" translatable="false">http://cyberwire.ddns.net/privacy.html</string>
    <string name="app_name" translatable="false">CyberWire</string>
    <string name="app_name_full" translatable="false">CyberWire Chat</string>
    <string name="copyright" translatable="false">© 2014 – 2025 CyberWire</string>
    <string name="tinode" translatable="false">CyberWire</string>
    <string name="app_version">Verzió</string>
    <string name="login_hint">Bejelentkezés</string>
    <string name="password_hint">Jelszó</string>
    <string name="new_message_hint">Új üzenet</string>
    <string name="send_message_button_hint">Üzenet küldése</string>
    <string name="send_image_button_hint">Kép küldése</string>
    <string name="send_file_button_hint">Fájl küldése</string>
    <string name="sign_in">Belépés</string>
    <string name="app_description" translatable="false">CyberWire Chat</string>
    <string name="action_signup">Regisztráció</string>
    <string name="sign_up">Regisztráció</string>
    <string name="login_new">Bejelentkezés</string>
    <string name="password_new">Jelszó</string>
    <string name="full_name">Teljes név, pl.: Kis Pista</string>
    <string name="tinode_logo" translatable="false">CyberWire logó</string>
    <string name="action_cancel">Mégse</string>
    <string name="settings_host_name">Szerver címe</string>
    <string name="settings_use_tls">Biztonságos kapcsolat használata</string>
    <string name="settings_tls_explained">Titkosított kapcsolat a szerverhez (mint a kémfilmekben!)</string>
    <string name="settings_host_name_explained">Kapcsolódás ide: ’%1$s’</string>
    <string name="typing_indicator_text" translatable="false">Éppen ír…</string>
    <string name="typing_indicator_many" translatable="false">Többen éppen írnak…</string>
    <string name="unread_messages_count" translatable="false">%1$d olvasatlan üzenet</string>
    <string name="new_message_in_topics" translatable="false">Új üzenet: %1$d</string>
    <string name="modeReadOnly">csak olvasható</string>
    <string name="modeAdmin">admin</string>
    <string name="modeOwner">tulaj</string>
    <string name="modeBlocked">tiltva</string>
    <string name="modeInvited">meghívva</string>
    <string name="modeRequested">kérelem alatt</string>
    <string name="modePending">függőben</string>
    <string name="action_settings">Beállítások</string>
    <string name="action_delete">Törlés</string>
    <string name="action_mute">Némítás</string>
    <string name="action_unmute">Némítás feloldása</string>
    <string name="action_clear_messages">Összes üzenet törlése</string>
    <string name="action_new_chat">Új csevegés</string>
    <string name="action_about">Névjegy</string>
    <string name="action_search">Keresés</string>
    <string name="action_add_contact">Kapcsolat hozzáadása</string>
    <string name="action_send_now">Küldés most (mert miért ne?)</string>
    <string name="action_view_details">Részletek megtekintése</string>
    <string name="action_copy">Másolás</string>
    <string name="action_offline">Offline módban</string>
    <string name="action_delete_group">Csevegés törlése…</string>
    <string name="action_chat_background" translatable="false">Chat háttere</string>
    <string name="chat_background_set" translatable="false">Háttér beállítva</string>
    <string name="chat_background_reset" translatable="false">Háttér visszaállítása</string>
    <string name="action_leave_topic">Kilépés a beszélgetésből…</string>
    <string name="action_video_call">Videóhívás</string>
    <string name="avatar">Profilkép</string>
    <string name="image_is_unavailable">A kép nem elérhető</string>
    <string name="error_login_failed">Bejelentkezés sikertelen: </string>
    <string name="login_required">Bejelentkezés szükséges</string>
    <string name="password_required">Jelszó szükséges</string>
    <string name="error_new_account_failed">Regisztráció sikertelen:</string>
    <string name="no_chats">Nincs egy darab csevegésed sem\n\n¯\\_(ツ)_/¯</string>
    <string name="alphabet">\ ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="tinode_invite_subject">Nézd meg a CyberWire Messengert</string>
    <string name="tinode_invite_body">Próbáld ki a CyberWire Messengert. Töltsd le innen: https://tinode.co</string>
    <string name="profile_action">CyberWire profil</string>
    <string name="view_profile">Profil megtekintése</string>
    <string name="tinode_message">CyberWire üzenet küldése</string>
    <string name="hint_topic_title">A csoport neve</string>
    <string name="group_members">Csoporttagok</string>
    <string name="name_required">Csoportnév kötelező</string>
    <string name="no_members">Nincs egy árva tag sem</string>
    <string name="add_one_member">Adj hozzá legalább egy tagot</string>
    <string name="add_members">Tagok hozzáadása</string>
    <string name="id">Azonosító:</string>
    <string name="topic_muted">Némítva</string>
    <string name="permissions">Jogosultságok</string>
    <string name="your_permissions">A tieid</string>
    <string name="no_connection">Nincs interneted (kávészünet?)</string>
    <string name="action_failed">A művelet nem sikerült</string>
    <string name="placeholder_contact_title">Névtelen vagy ismeretlen</string>
    <string name="placeholder_topic_title">Névtelen</string>
    <string name="placeholder_private">Privát jegyzetek</string>
    <string name="options_menu">Opciók menü</string>
    <string name="current_user">Te</string>
    <string name="default_permissions">Alapértelmezett jogok</string>
    <string name="auth_permissions">Hitelesített felhasználók</string>
    <string name="anon_permissions">Névtelen felhasználók</string>
    <string name="topic_private">Extra infó (csak neked látszik)</string>
    <string name="edit_permissions">Jogok szerkesztése</string>
    <string name="permission_owner">Teljes kontroll (tulaj)</string>
    <string name="permission_join">Csatlakozás</string>
    <string name="permission_read">Olvasás</string>
    <string name="permission_write">Írás</string>
    <string name="permission_approve">Új tagok jóváhagyása</string>
    <string name="permission_share">Tagok meghívása</string>
    <string name="permission_notifications">Értesítések fogadása</string>
    <string name="permission_delete">Üzenetek törlése</string>
    <string name="send_message">Üzenet küldése</string>
    <string name="change_permissions">Jogok módosítása</string>
    <string name="make_owner">Tulajjá tenni</string>
    <string name="remove_from_group">Eltávolítás</string>
    <string name="block">Tiltás</string>
    <string name="confirm_member_removal">%1$s eltávolítása innen: „%2$s”?</string>
    <string name="confirm_member_ban">%1$s eltávolítása és tiltása innen: „%2$s”?</string>
    <string name="confirm_leave_topic">Biztos ki akarsz lépni ebből a beszélgetésből? (Pedig még csak most lett izgalmas!)</string>
    <string name="confirm_delete_topic">Biztos törölni akarod ezt a beszélgetést mindenkinél?</string>
    <string name="confirm_delete_multiple_topics">Biztos törölni akarod ezeket a csevegéseket?</string>
    <string name="modeWriteOnly">csak írás</string>
    <string name="read_receipts_enabled">Olvasási visszaigazolások küldése</string>
    <string name="typing_notifications_enabled">Gépelésjelzés mutatása (hogy mindenki lássa, szenvedsz a billentyűn)</string>
    <string name="logout">Kijelentkezés</string>
    <string name="change_password">Jelszócsere</string>
    <string name="account_settings">Fiók beállításai</string>
    <string name="enter_new_password">Adj meg egy új jelszót</string>
    <string name="confirm_logout">Biztos ki akarsz lépni? (Kint hideg van…)</string>
    <string name="invalid_login">Érvénytelen bejelentkezés</string>
    <string name="default_attachment_name" translatable="false">file_attachment</string>
    <string name="download_attachment">Mentés</string>
    <string name="broken_image">Ismeretlen vagy hibás képformátum</string>
    <string name="attachment_too_large">A fájl mérete (%1$s) meghaladja a limitet (%2$s). Kicsit fogyózni kéne!</string>
    <string name="failed_to_download">A letöltés sikertelen</string>
    <string name="failed_to_save_download">A letöltött fájl mentése nem sikerült</string>
    <string name="failed_to_open_file">Nincs app, ami meg tudná nyitni ezt a fájlt</string>
    <string name="failed_empty_password">Nem változott: üres jelszó</string>
    <string name="failed_credential_confirmation">Hibás megerősítő kód</string>
    <string name="contacts_section_contacts">Telefon névjegyek</string>
    <string name="contacts_section_directory">Katalógus</string>
    <string name="email">Email</string>
    <string name="email_required">Email szükséges</string>
    <string name="confirm">Megerősítés</string>
    <string name="validation_example">Csak számokat üss, ne smileyt :)</string>
    <string name="enter_confirmation_code">Írd be a megerősítő kódot</string>
    <string name="hint_add_by_id">Írd be a csoport vagy felhasználó ID-ját</string>
    <string name="hint_search_tags">Keresés címkék alapján</string>
    <string name="topic_not_found_or_invalid">A beszélgetés nem található vagy hibás</string>
    <string name="sending_disabled">Nem elérhető</string>
    <string name="download_title">CyberWire letöltés</string>
    <string name="some_permissions_missing">Engedélyezd az összes kért jogosultságot!</string>
    <string name="unable_to_attach_file">Nem sikerült csatolni a fájlt</string>
    <string name="canceled">megszakítva</string>
    <string name="login_rejected">Bejelentkezés elutasítva</string>
    <string name="email_rejected">Email elutasítva</string>
    <string name="invalid_confirmation_code">Érvénytelen kód</string>
    <string name="new_message_channel_name">Új üzenet</string>
    <string name="new_message">Új üzenet</string>
    <string name="new_message_channel_description">Új üzeneted érkezett (nem a NAV-tól)</string>
    <string name="request_pass_reset_title">Jelszó visszaállítás</string>
    <string name="request">Kérés</string>
    <string name="forgot_password">Elfelejtett jelszó</string>
    <string name="invalid_or_unknown_credential">Érvénytelen vagy ismeretlen cím</string>
    <string name="user_not_found">Nem található</string>
    <string name="topic_tags">Címkék, vesszővel elválasztva</string>
    <string name="sender_unknown">Ismeretlen feladó</string>
    <string name="action_archive">Archiválás</string>
    <string name="archived_chats">Archivált csevegések</string>
    <string name="action_show_archive">Archivált beszélgetések</string>
    <string name="request_new_chat_title">Új csevegés</string>
    <string name="request_new_chat_message">Meghívást kaptál egy új beszélgetésre. Mit lépsz?</string>
    <string name="new_chat_accept">Elfogadás</string>
    <string name="new_chat_ignore">Ignorálás</string>
    <string name="new_chat_block">Tiltás</string>
    <string name="new_chat">Új csevegés</string>
    <string name="messages_not_readable">Nincs jogosultságod az új üzenetekhez (titkos CIA anyagok?)</string>
    <string name="deleted">törölve</string>
    <string name="peers_messaging_disabled">A partner üzenetküldése le van tiltva</string>
    <string name="group">Csoport</string>
    <string name="topic_blocked">Letiltva</string>
    <string name="topic_archived">Archiválva</string>
    <string name="channel">csatorna</string>
    <string name="unavailable">nem elérhető</string>
</resources>